--- a/angular-pubs/src/styles.css
+++ b/angular-pubs/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  /*background-image: url(./img/background.jpeg);*/
+  background-image: url(https://raw.githubusercontent.com/ryanpeterson08/portland-breweries/master/img/background.jpg);
+}
