--- a/angular-pubs/src/app/components/map/map.component.html
+++ b/angular-pubs/src/app/components/map/map.component.html
@@ -1,2 +1,6 @@
 <h1>Breweries</h1>
 <div id="map"></div>
+
+<ul>
+  <li *ngFor="let currentPub of pubArray">{{currentPub.properties.Brewery}}</li>
+</ul>
