add put method for api - still getting 404 on put request

--- a/angular-pubs/src/app/components/map/map.component.html
+++ b/angular-pubs/src/app/components/map/map.component.html
@@ -4,7 +4,7 @@
 <div class="row" >
   <div *ngFor="let currentPub of pubArray">
     <div class="col-md-4">
-     <li><input type='checkbox' name='visited-pubs' value=''> "{{currentPub.properties.Brewery}}</li>
+     <li><input type='checkbox' name='visited-pubs' [checked]="currentPub.properties.Visited" (click)="updateStatus(currentPub)"> "{{currentPub.properties.Brewery}}</li>
    </div>
   </div>
 </div>
