--- a/angular-pubs/src/app/components/map/map.component.css
+++ b/angular-pubs/src/app/components/map/map.component.css
@@ -13,3 +13,9 @@ li{
   list-style: none;
   margin-top: 5px;
 }
+
+.navbar-fixed-side{
+    height:700px;
+    overflow:scroll;
+    overflow-x:hidden;
+}
